src/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    application: godoku
    category: tuff-apps
    resiliency: multiple
  name: tuff-godoku
  namespace: tuff-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      application: godoku
      category: tuff-apps
      resiliency: multiple
  template:
    metadata:
      labels:
        application: godoku
        category: tuff-apps
        resiliency: multiple
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: tuff-godoku
        image: image-registry.openshift-image-registry.svc:5000/tuff-apps/godoku:0.18.0
        imagePullPolicy: IfNotPresent
        name: tuff-godoku
        ports:
          - containerPort: 8080
            name: godoku-port
