src/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels: {application: godoku, category: tuff-apps, resiliency: multiple}
  name: tuff-godoku
  namespace: tuff-apps
spec:
  ports:
  - {name: godoku, port: 8080, targetPort: 8080}
  selector: {application: godoku, category: tuff-apps, resiliency: multiple}
  type: ClusterIP
