src/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels: {application: godoku, category: tuff-apps, resiliency: multiple}
  name: tuff-godoku
  namespace: tuff-apps
spec:
  host: godoku.tripko.local
  to: {kind: Service, name: tuff-godoku}
